--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -121,7 +121,7 @@ nav:
     - La transformation des régimes politiques: Articles/La-transformation-des-regimes-politiques.md
     - La protections des démocracies: Articles/La-protections-des-democracies.md
     - La construction européenne: Articles/La-construction-europeenne.md
-  - Lexique :
+  - Lexique : Lexique.md
   - Biographies:
    - Droits civiques: Biographies/Droits-civiques.md
    - Intelectuels contemporains: Biographies/Intelectuels-contemporains.md
